# crypto-quant-app

./: .gitignore  DECISIONS.md  DESIGN.md  DESIGN_SYSTEM.md  DEVELOPMENT.md  PROGRESS.md  README.md  Release前审查报告.md  agent-collaboration-plan.md  build_output.txt  code-quality-audit.md  docker-compose.yml  install_sdk.bat  okx-api-audit-report.md  prototype.html  reality-check-report.md  test_output.txt  test_output2.txt  test_output3.txt  test_output4.txt  后端补充接口文档.md  系统架构设计文档.md  项目进展报告.md
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: a1b2c3d4e5f6_add_strategy_instance_state_json.py  d5fb4b2de1b0_initial_tables.py
backend/app/: __init__.py  config.py  constants.py  database.py  main.py  redis.py  seed_data.py
backend/app/api/: deps.py
backend/app/api/v1/: __init__.py  asset.py  auth.py  backtest.py  market.py  orders.py  setup.py  strategies.py  users.py  ws_market.py
backend/app/core/: error_handling.py  exceptions.py  exchange_adapter.py  indicators.py  performance.py  rule_engine.py  schemas.py  security.py  strategy_engine.py  strategy_runner.py  trade_schemas.py
backend/app/models/: __init__.py  backtest.py  exchange.py  order.py  strategy.py  user.py
backend/app/repositories/: __init__.py  base.py  strategy_repo.py  trading_repo.py  user_repo.py
backend/app/services/: __init__.py  asset_service.py  auth_service.py  backtest_service.py  market_service.py  order_service.py  strategy_service.py
backend/app/web/: routes.py
backend/tests/: conftest.py  test_auth.py  test_config.py  test_error_handling.py  test_exchange_adapters.py  test_market_service_perp.py  test_order_service.py  test_orders_api.py  test_performance.py  test_repositories.py  test_rsi_layered.py  test_rule_engine.py  test_security.py  test_seed_data.py  test_strategies_api.py  test_strategy.py  test_strategy_intent_dispatch.py  test_strategy_runner.py  test_strategy_state_persistence.py  test_ws_manager.py  test_ws_proxies.py
(+152 files in other folders)
