[project]
name = "crypto-quant-backend"
version = "1.0.0"
description = "币钱袋量化交易后端服务"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "CryptoQuant Team" }
]
dependencies = [
    # Web Framework
    "fastapi>=0.109.0,<0.112.0",
    "uvicorn[standard]>=0.27.0,<0.30.0",

    # Data Validation
    "pydantic>=2.5.0,<3.0.0",
    "email-validator>=2.0.0,<3.0.0",
    "pydantic-settings>=2.1.0,<3.0.0",

    # Database
    "sqlalchemy>=2.0.25,<3.0.0",
    "asyncpg>=0.29.0,<0.30.0",
    "aiosqlite>=0.20.0,<1.0.0",
    "alembic>=1.13.0,<2.0.0",

    # Redis
    "redis>=5.0.0,<6.0.0",

    # Auth
    "python-jose[cryptography]>=3.3.0,<4.0.0",
    "passlib[bcrypt]>=1.7.4,<2.0.0",
    "bcrypt>=4.0.1,<4.1.0",
    "python-multipart>=0.0.6,<0.0.7",

    # HTTP Client
    "httpx>=0.26.0,<0.28.0",

    # WebSocket
    "websockets>=12.0,<14.0",

    # Logging
    "structlog>=24.1.0,<25.0.0",

    # Utils
    "python-dotenv>=1.0.0,<2.0.0",
    "orjson>=3.9.0,<4.0.0",
    "numpy>=1.26.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0,<8.0.0",
    "pytest-asyncio>=0.23.0,<0.24.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "httpx>=0.26.0,<0.28.0",
    "factory-boy>=3.3.0,<4.0.0",
    "ruff>=0.2.0,<0.3.0",
    "mypy>=1.8.0,<2.0.0",
    "pre-commit>=3.6.0,<4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "PT"]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
